# rust-template

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
_dev/mongo/: initialise-mongo.js
config/: default.yml
src/: app_config.rs  main.rs
src/store/: mod.rs  results.rs
