[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
config = "0.13.3"
dotenv = "0.15.0"
futures = "0.3.26"
mongodb = "2.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.26.0"
actix-web = "4"
